Markdown ImgWrap Fix

--- a/static/css/pages/subpages.scss
+++ b/static/css/pages/subpages.scss
@@ -1,10 +1,15 @@
 img + p,
 img + ul,
 img + h3,
-img + h4 {
+img + h4,
+.inline-image + p,
+.inline-image + ul,
+.inline-image + h3,
+.inline-image + h4 {
 	margin-top: $space24;
 }
-img + h5 {
+img + h5,
+.inline-image + h5 {
 	margin-top: $space48;
 }
 .subpage hr {
